--- a/day_1/layout.html
+++ b/day_1/layout.html
@@ -11,7 +11,7 @@
         <h1>Sonawla Dhruvi</h1>
     </header>
 
-    <div class="container">
+    <div class="container add">
         <nav>
             <ul>
                 <li><a href="#">Home</a></li>
